<resources>
    <string name="app_name">Edeka</string>
    <string name="title_einkaufszettel">Einkaufszettel</string>
    <string name="title_produktsuche">Produktsuche</string>
    <string name="title_angebote">Angebote</string>
    <string name="title_ueber_uns">Über uns</string>

    <!--Strings for the About-Page-->

    <!-- Store Title -->
    <string name="headline_store">Ihr Lieblingsmarkt</string>
    <string name="name_store">EDEKA Steinberger</string>

    <!--Opening Hours -->
    <string name="headline_opening_hours">Öffnungszeiten</string>
    <string name="opening_hours_mo_fr">Mo-Fr: 07:00 - 20:00 Uhr</string>
    <string name="opening_hours_sa">Sa: 07:00 - 20:00 Uhr</string>

    <!--Contact -->
    <string name="headline_contact">So erreichen Sie uns</string>
    <string name="phone_contact">Tel: 09971 / 3927960</string>
    <string name="fax_contact">Fax: 09971 / 3927961</string>
    <string name="address_contact">Darsteinstr. 10, 93413 Cham</string>


    <!--Services -->
    <string name="headline_services">Verfügbare Services</string>
    <string name="service_backshop">Backshop / Bäckerei</string>
    <string name="service_DC">DeutschlandCard</string>
    <string name="service_coupon_card">EDEKA Gutscheinkarte</string>
    <string name="service_shopping_coupon">Einkaufsgutscheine</string>
    <string name="service_fish">Fischtheke</string>
    <string name="service_meat">Fleisch- &amp; Wursttheke</string>
    <string name="service_drinks">Getränkeshop</string>
    <string name="service_parking">Kostenfreie Parkplätze</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_activity_map">MapActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_pay">PayActivity</string>


</resources>
