<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/content_header"
        android:id="@+id/header_component"/>

    <!--Store Name-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:textSize="14sp"
        android:id="@+id/headline_store"
        android:layout_below="@+id/header_component"
        android:text="@string/headline_store"
        android:textColor="@color/colorText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginLeft="15dp"
        android:textStyle="bold"
        android:text="@string/name_store"
        android:id="@+id/name_store"
        android:layout_below="@+id/headline_store"
        android:textColor="@color/colorText" />

    <!-- Opening Hours -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginLeft="15dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:text="@string/headline_opening_hours"
        android:id="@+id/headline_opening_hours"
        android:layout_below="@+id/name_store"
        android:textColor="@color/colorText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginLeft="15dp"
        android:text="@string/opening_hours_mo_fr"
        android:id="@+id/text_opening_hours_mo_fr"
        android:layout_below="@+id/headline_opening_hours"
        android:textColor="@color/colorText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginLeft="15dp"
        android:text="@string/opening_hours_sa"
        android:id="@+id/text_opening_hours_sa"
        android:layout_below="@+id/text_opening_hours_mo_fr"
        android:textColor="@color/colorText" />

    <!-- Contact -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginLeft="15dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:text="@string/headline_contact"
        android:id="@+id/headline_contact"
        android:layout_below="@+id/text_opening_hours_sa"
        android:textColor="@color/colorText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginLeft="15dp"
        android:text="@string/phone_contact"
        android:id="@+id/phone_contact"
        android:layout_below="@+id/headline_contact"
        android:textColor="@color/colorText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginLeft="15dp"
        android:text="@string/fax_contact"
        android:id="@+id/fax_contact"
        android:layout_below="@+id/phone_contact"
        android:textColor="@color/colorText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginLeft="15dp"
        android:text="@string/address_contact"
        android:id="@+id/address_contact"
        android:layout_below="@+id/fax_contact"
        android:textColor="@color/colorText" />


    <!-- Services -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginLeft="15dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:text="@string/headline_services"
        android:id="@+id/headline_services"
        android:layout_below="@+id/address_contact"
        android:textColor="@color/colorText" />



</RelativeLayout>